--- a/jsdatademo/index.html
+++ b/jsdatademo/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./lesson3.js"></script>
-    <script src="./ls3-divideBy2.js"></script>
+    <!-- <script src="./lesson3.js"></script> -->
+    <script type="module" src="./ls3-divideBy2.js"></script>
 </body>
 </html>
