--- a/jd-scroll/index.html
+++ b/jd-scroll/index.html
@@ -11,11 +11,36 @@
 </head>
 
 <body>
-    <div class="flexBox">
+    <div class="flexBox outterBox" >
         <div class="headerBox flexBox">
             <div class="scrollBox flexBox">
                 <div class="list">
                 </div>
+                
+            </div>
+            <div class="infoBox">asdasd</div>
+        </div>
+        <div class="contain">
+            <div class="items">
+                aaaa
+            </div>
+            <div class="items">
+                bbbb
+            </div>
+            <div class="items">
+                cccc
+            </div>
+            <div class="items">
+                dddd
+            </div>
+            <div class="items">
+                eeee
+            </div>
+            <div class="items">
+                ffff
+            </div>
+            <div class="items">
+                gggg
             </div>
         </div>
     </div>
