add left right btn

--- a/jd-scroll/index.html
+++ b/jd-scroll/index.html
@@ -16,7 +16,10 @@
             <div class="scrollBox flexBox">
                 <div class="list">
                 </div>
-                
+                <div class="btnBox">
+                    <div class="leftBtn">《</div>
+                    <div class="rightBtn">》</div>
+                </div>
             </div>
             <div class="infoBox">asdasd</div>
         </div>
