--- a/jd-scroll/index.html
+++ b/jd-scroll/index.html
@@ -47,8 +47,9 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script> -->
+    <script src="https://www.sctx.com/assets/a2bc6601/js/jquery.js?v=1.0"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script> -->
     <script src="./js/index.js"></script>
 </body>
 
